<resources>
    <string name="app_name">Tugas UTS</string>
    <string name="ListofUsersTitle">Lists of Users</string>
    <string name="AddUserTitle">Add User</string>
    <string name="SaveDataButton">Save Data</string>
    <string name="FullNameHint">Full Name</string>
    <string name="AgeHint">Age</string>
    <string name="AddressHint">Address</string>
    <string name="MainNoData">No Data</string>
    <string name="LoadingDialogue">Loading...</string>
    <string name="editUserTxt">Edit User</string>
    <string name="EditDataButton">Edit Data</string>
    <string name="UserDetailToolbar">User Detail</string>
    <string name="AgeTitle">Age</string>
    <string name="NameTitle">Name</string>
    <string name="AddressTitle">Address</string>
    <string name="deleteBtn">Delete</string>
    <string name="editBtn">Edit</string>
</resources>
