<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUserActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                app:title="@string/editUserTxt"
                app:titleTextColor="#FFFFFF" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_nametext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FullNameHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="@+id/edit_name"
                app:layout_constraintStart_toStartOf="@+id/edit_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_agetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/AgeHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="@+id/edit_age"
                app:layout_constraintStart_toStartOf="@+id/edit_age"
                app:layout_constraintTop_toBottomOf="@+id/edit_age">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_addresstext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/AddressHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_editdata"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_selector"
                android:enabled="true"
                android:text="@string/EditDataButton"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>